create swagger for user
